--- a/midterm/css/main.css
+++ b/midterm/css/main.css
@@ -106,7 +106,7 @@ textarea {
     .empty-box {
         width: 800px;
         height: 400px;
-        border: black 2px;
+        border: 2px;
         background-color: wheat;
     }
 
