--- a/midterm/css/main.css
+++ b/midterm/css/main.css
@@ -50,3 +50,60 @@ header {
         float: left;
         margin-right: 0.8rem;
     }
+
+    div ul {
+        list-style-type: square;
+        display: block;
+    }
+
+    div ul li {
+        font-size: 2rem;
+        display: block;
+        list-style-type: circle;
+    }
+
+    .facts {
+        margin-top: 5px;
+        padding: 0rem;
+        font-size: 20px;
+        color: brown; /*set text color to red */
+    }
+
+    form {
+        max-width: 4rem;
+        position: absolute;
+        box-sizing: 50%;
+    }
+
+    input {
+        width: 1200%;
+        height: 100%;
+    }
+
+    textarea {
+        width: 1200%;
+        height: 130%;
+        padding: 10px 12px;
+        font-size: 20px;
+    }
+
+    .empty-box {
+        width: 900px;
+        height: 400px;
+        background-color: bisque;
+    }
+
+    .section {
+        width: 20px;
+        font-size: 20px;
+    }
+
+    button {
+        width: 100px;
+        height: 50px;
+        background-color: blueviolet;
+    }
+
+    footer {
+        font-size: 30px;
+    }
