--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -26,6 +26,9 @@ body {
 
         display: flex;
         flex-direction: column;
+        text-align: center;
+        margin: 2rem;
+        color: #c78c06;
 
     }
 
